Updated HouseholdInvitationService and tests to use the security service